# Django-REST-Framework

./: .env.example  .env.template  .gitignore  DEPLOYMENT.md  README.md  SSH_35.2  SSH_35.2.pub  SSH_KEY  SSH_KEY.pub  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
config/management/commands/: celery_beat.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0003_subscription.py  0004_alter_subscription_course_alter_subscription_user.py
payments/: models.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py
payments/templates/payments/: cancel.html  success.html
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: load_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0002_payment.py  0003_alter_user_managers_alter_user_email_and_more.py  0003_delete_payment.py
