[project]
name = "django-rest-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debug (>=0.3.2,<0.4.0)",
    "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "stripe (>=12.4.0,<13.0.0)",
    "django-filter (>=25.1,<26.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
